tests/cases/standard-library/errors/collections/std-collections-binary-heap-push-different-zone.ari
fn main() -> i64 {
  var left = zone::create(128);
  var right = zone::create(128);
  var heap = BinaryHeap::with_less<i64>(ref mut left, 1, collections::less_i64);

  heap.push(ref mut right, 5);

  zone::destroy(right);
  zone::destroy(left);
  return 0;
}
